--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,3 +2,4 @@ add_definitions(--std=c++17 -Wall -Werror -pedantic -pthread)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/lib)
 add_subdirectory(afct)
 add_subdirectory(lib)
+add_subdirectory(test)
