--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -1,10 +1,11 @@
 add_library(artifact SHARED
+  artifact.cpp
   builder.cpp
   env.cpp
   eval.cpp
   expr.cpp
   function.cpp
-  native.cpp
   parse.cpp
+  prelude.cpp
   querier.cpp
   util.cpp)
