--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -1,2 +1,10 @@
-add_executable(test builder.cpp eval.cpp expr.cpp lex.cpp main.cpp parse.cpp querier.cpp)
+add_executable(test
+  builder.cpp
+  eval.cpp
+  expr.cpp
+  lex.cpp
+  main.cpp
+  parse.cpp
+  querier.cpp
+  util.cpp)
 target_link_libraries(test artifact stdc++fs)
