--- a/src/afct/CMakeLists.txt
+++ b/src/afct/CMakeLists.txt
@@ -1,2 +1,3 @@
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../lib)
 add_executable(afct main.cpp)
-target_link_libraries(afct artifact stdc++fs)
+target_link_libraries(afct artifact stdc++fs fmt)
